--- a/.github/workflows/promptflow-sdk-cli-test.yml
+++ b/.github/workflows/promptflow-sdk-cli-test.yml
@@ -48,6 +48,7 @@ jobs:
           ${{ github.workspace }}/src/promptflow/dist/*.whl
           ${{ github.workspace }}/src/promptflow-tools/dist/*.whl
   sdk_cli_tests:
+    needs: build
     strategy:
       fail-fast: false
       matrix:
