--- a/.github/workflows/promptflow-sdk-cli-test.yml
+++ b/.github/workflows/promptflow-sdk-cli-test.yml
@@ -102,7 +102,7 @@ jobs:
       with:
         targetFolder: ${{ env.testWorkingDirectory }}
     - name: generate live test resources (pull_request workflow)
-      if: github.event_name != 'pull_request'
+      if: github.event_name == 'pull_request'
       shell: pwsh
       working-directory: ${{ env.testWorkingDirectory }}
       run: |
