--- a/.github/workflows/promptflow-sdk-cli-test.yml
+++ b/.github/workflows/promptflow-sdk-cli-test.yml
@@ -5,8 +5,7 @@ on:
   pull_request:
     paths:
       - src/promptflow/**
-      - scripts/building/run_coverage_tests.py
-      - scripts/building/utils.py
+      - scripts/building/**
       - .github/workflows/promptflow-sdk-cli-test.yml
   workflow_dispatch:
 env:
