--- a/.github/workflows/promptflow-release-testing-matrix-alter.yml
+++ b/.github/workflows/promptflow-release-testing-matrix-alter.yml
@@ -124,26 +124,6 @@ jobs:
           -l eastus `
           -m "unittest or e2etest" `
           -o "${{ github.workspace }}/test-results-sdk-cli-executable.xml"
-    - name: Install pf Azure
-      shell: pwsh
-      working-directory: artifacts
-      run: |
-        Set-PSDebug -Trace 1
-        gci ./promptflow -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)[azure]" --force}}
-        pip freeze
-    - name: Run SDK CLI Azure Test
-      if : ${{ matrix.testType == 'sdk-cli' }}
-      shell: pwsh
-      working-directory: ${{ env.testWorkingDirectory }}
-      env:
-        PROMPT_FLOW_TEST_MODE: "live"
-      run: |
-        python "../../scripts/building/run_coverage_tests.py" `
-          -p promptflow `
-          -t ${{ github.workspace }}/src/promptflow/tests/sdk_cli_azure_test `
-          -l eastus `
-          -m "unittest or e2etest" `
-          -o "${{ github.workspace }}/test-results-sdk-cli-azure.xml"
     - name: Run Executor Test
       if : ${{ matrix.testType == 'executor' }}
       shell: pwsh
@@ -198,53 +178,12 @@ jobs:
       uses: "./.github/actions/step_generate_configs"
       with:
         targetFolder: ${{ env.testWorkingDirectory }}
-    - name: Install pf
+    - name: Install pf azure
       shell: pwsh
       working-directory: artifacts
       run: |
         pip install -r ${{ github.workspace }}/src/promptflow/dev_requirements.txt
         gci ./promptflow -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)"}}
-        gci ./promptflow-tools -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install $_.FullName}}
-        pip freeze
-    - name: Run SDK CLI Test
-      if : ${{ matrix.testType == 'sdk-cli' }}
-      shell: pwsh
-      working-directory: ${{ env.testWorkingDirectory }}
-      env:
-        PROMPT_FLOW_TEST_MODE: "replay"
-      run: |
-        python "../../scripts/building/run_coverage_tests.py" `
-          -p promptflow `
-          -t ${{ github.workspace }}/src/promptflow/tests/sdk_cli_test `
-          -l eastus `
-          -m "unittest or e2etest" `
-          -o "${{ github.workspace }}/test-results-sdk-cli.xml" `
-          --ignore-glob ${{ github.workspace }}/src/promptflow/tests/sdk_cli_test/e2etests/test_executable.py
-    - name: Install pf executable
-      shell: pwsh
-      working-directory: artifacts
-      run: |
-        Set-PSDebug -Trace 1
-        gci ./promptflow -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)[executable]" --force}}
-        pip freeze
-    - name: Run SDK CLI Executable Test
-      if : ${{ matrix.testType == 'sdk-cli' }}
-      shell: pwsh
-      working-directory: ${{ env.testWorkingDirectory }}
-      env:
-        PROMPT_FLOW_TEST_MODE: "live"
-      run: |
-        python "../../scripts/building/run_coverage_tests.py" `
-          -p promptflow `
-          -t ${{ github.workspace }}/src/promptflow/tests/sdk_cli_test/e2etests/test_executable.py `
-          -l eastus `
-          -m "unittest or e2etest" `
-          -o "${{ github.workspace }}/test-results-sdk-cli-executable.xml"
-    - name: Install pf Azure
-      shell: pwsh
-      working-directory: artifacts
-      run: |
-        Set-PSDebug -Trace 1
         gci ./promptflow -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)[azure]" --force}}
         pip freeze
     - name: Run SDK CLI Azure Test
@@ -260,21 +199,6 @@ jobs:
           -l eastus `
           -m "unittest or e2etest" `
           -o "${{ github.workspace }}/test-results-sdk-cli-azure.xml"
-    - name: Run Executor Test
-      if : ${{ matrix.testType == 'executor' }}
-      shell: pwsh
-      working-directory: ${{ github.workspace }}
-      run: |
-        gci env:* | sort-object name
-        az account show
-        pip install langchain
-        pip install numexpr
-        python scripts/building/run_coverage_tests.py `
-          -p ${{ github.workspace }}/src/promptflow/promptflow `
-          -t ${{ github.workspace }}/src/promptflow/tests/executor/e2etests ${{ github.workspace }}/src/promptflow/tests/executor/unittests `
-          -l eastus `
-          -m "all" `
-          -o "${{ github.workspace }}/test-results-executor.xml"
     - name: Upload pytest test results (Python ${{ matrix.pythonVersion }}) (OS ${{ matrix.os }})
       if: ${{ always() }}
       uses: actions/upload-artifact@v3
