--- a/.github/workflows/update-ci-runtime.yml
+++ b/.github/workflows/update-ci-runtime.yml
@@ -1,19 +1,19 @@
-name: Clean runtime disk
+name: Update CI runtime
 
 on:
   pull_request:
     paths:
-      - scripts/runtime_mgmt/clean-disk-flow/**
-      - scripts/runtime_mgmt/create-clean-run.py
-      - .github/workflows/clean-runtime-disk.yml
+      - scripts/runtime_mgmt/runtime-env/**
+      - scripts/runtime_mgmt/update-runtime.py
+      - .github/workflows/update-ci-runtime.yml
 
   schedule:
-    - cron: "30 20 * * *"  # 4:30 Beijing Time (GMT+8)
-
+    - cron: "30 20 * * WED"  # 4:30 Thursday Beijing Time (GMT+8)
+  
   workflow_dispatch:
 
 jobs:
-  clean_runtime_disk:
+  update_runtime:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -34,10 +34,10 @@ jobs:
           echo '${{ secrets.TEST_WORKSPACE_CONFIG_JSON_CANARY }}' > ${{ github.workspace }}/scripts/runtime_mgmt/canary.json
           echo '${{ secrets.EXAMPLE_WORKSPACE_CONFIG_JSON_PROD }}' > ${{ github.workspace }}/scripts/runtime_mgmt/production.json
 
-      - name: Submit run to clean
+      - name: Update runtime
         shell: pwsh
         working-directory: ${{ github.workspace }}/scripts/runtime_mgmt
         run: |
           pip install promptflow[azure]
-          python create-clean-run.py --path canary.json
-          python create-clean-run.py --path production.json
+          python update-runtime.py --path canary.json
+          python update-runtime.py --path production.json
