--- a/.github/workflows/tools_tests.yml
+++ b/.github/workflows/tools_tests.yml
@@ -26,6 +26,7 @@ jobs:
           pip install pytest pytest_mock
           pip install azure-identity azure-keyvault-secrets
           pip install -r ./src/promptflow-tools/requirements.txt
+          pip install promptflow==0.0.111402826 --extra-index  https://azuremlsdktestpypi.azureedge.net/test-promptflow/
       - name: Generate configs
         run: |
           python ./scripts/tool/generate_connection_config.py --tenant_id ${{ secrets.TENANT_ID }} --client_id ${{ secrets.CLIENT_ID }} --client_secret ${{ secrets.CLIENT_SECRET }}
