Allow extension detection of the latest msi version (#1198)
# Description

![image](https://github.com/microsoft/promptflow/assets/26239730/69f6241f-029a-41bf-9e21-0c7289dcdf91)

Please add an informative description that covers that changes made by
the pull request and link all relevant issues.

# All Promptflow Contribution checklist:
- [ ] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [ ] **I have read the [contribution guidelines](../CONTRIBUTING.md).**
- [ ] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [ ] Title of the pull request is clear and informative.
- [ ] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [ ] Pull request includes test coverage for the included changes.

---------

Co-authored-by: Ying Chen <2601502859@qq.com>

--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -73,11 +73,11 @@ jobs:
           if ($env:INPUT_VERSION) {
             $version=$env:INPUT_VERSION
           } else {
+            $prefix = 0
             $year = [int](Get-Date -Format "yy")
-            $month = [int](Get-Date -Format "MM")
-            $dayhour = [int](Get-Date -Format "ddHH")
-            $minutesecond = [int](Get-Date -Format "mmss")
-            $version="$year.$month.$dayhour.$minutesecond"
+            $monthday = [int](Get-Date -Format "MMdd")
+            $hourminutesecond = [int](Get-Date -Format "HHmmss")
+            $version="$prefix.$year.$monthday.$hourminutesecond"
           }
           echo "::set-output name=version::$version"
         env:
@@ -125,6 +125,20 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Check if version input is valid and upload JSON file
+        run: |
+          $version = "${{ steps.get-version.outputs.version }}"
+          if ($version -like '1.*') {
+            $jsonContent = @{
+              "promptflow" = $version
+            } | ConvertTo-Json -Depth 100
+            $jsonContent | Out-File -FilePath latest_version.json -Encoding UTF8
+            Write-Output "Created latest_version.json with version: $version"
+            az storage blob upload --account-name promptflowartifact --container-name msi-installer --file "latest_version.json" --name "latest_version.json" --overwrite
+          } else {
+            Write-Output "skip uploading since version input is either empty or does not start with '1.'"
+          }
 
       - name: Upload to Azure Storage
         run: |
