--- a/src/promptflow-tools/requirements.txt
+++ b/src/promptflow-tools/requirements.txt
@@ -2,6 +2,6 @@ google-search-results==2.4.1
 
 # TODO: remove "--extra-index-url" after pf package which support openai 1.x published
 --extra-index-url https://azuremlsdktestpypi.azureedge.net/test-promptflow/
-promptflow
+promptflow==0.0.111411603
 
 openai>=1.0.0
