--- a/src/promptflow-tools/requirements.txt
+++ b/src/promptflow-tools/requirements.txt
@@ -1,6 +1,6 @@
 google-search-results==2.4.1
 
-# TODO: remove "--extra-index-url" after pf package which support openai 1.x published
+# TODO: replace package after publish the pf package which support openai 1.x
 --extra-index-url https://azuremlsdktestpypi.azureedge.net/test-promptflow/
 promptflow==0.0.111411603
 
