--- a/.github/workflows/tools_tests.yml
+++ b/.github/workflows/tools_tests.yml
@@ -25,7 +25,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest pytest_mock
           pip install azure-identity azure-keyvault-secrets
-          pip install -r ./src/promptflow-tools/requirements.txt
+          pip install google-search-results==2.4.1
+          pip install promptflow==0.0.111411603 --extra-index-url https://azuremlsdktestpypi.azureedge.net/test-promptflow/
       - name: Generate configs
         run: |
           python ./scripts/tool/generate_connection_config.py --tenant_id ${{ secrets.TENANT_ID }} --client_id ${{ secrets.CLIENT_ID }} --client_secret ${{ secrets.CLIENT_SECRET }}
