--- a/src/promptflow-tools/requirements.txt
+++ b/src/promptflow-tools/requirements.txt
@@ -1,7 +1,3 @@
 google-search-results==2.4.1
-
-# TODO: replace package after publish the pf package which support openai 1.x
---extra-index-url https://azuremlsdktestpypi.azureedge.net/test-promptflow/
-promptflow==0.0.111411603
-
+promptflow
 openai>=1.0.0
