--- a/.github/workflows/tools_tests.yml
+++ b/.github/workflows/tools_tests.yml
@@ -10,7 +10,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     name: Tool Test
-#    timeout-minutes: 30
+    timeout-minutes: 30
 
     steps:
       - name: Check for dockerenv file
