--- a/.github/workflows/promptflow-release-testing-matrix-alter.yml
+++ b/.github/workflows/promptflow-release-testing-matrix-alter.yml
@@ -20,15 +20,12 @@ env:
   PYTHONPATH: ${{ github.workspace }}/src/promptflow
   IS_IN_CI_PIPELINE: "true"
 jobs:
-  id:
+  build:
     runs-on: ubuntu-latest
     steps:
     - name: workflow run id - ${{ inputs.id }}
       run: |
         echo "workflow run id: ${{ inputs.id }}"
-  build:
-    runs-on: ubuntu-latest
-    steps:
     - name: checkout
       uses: actions/checkout@v4
     - name: Python Setup - 3.9
@@ -48,17 +45,24 @@ jobs:
         path: |
           ${{ github.workspace }}/src/promptflow/dist/*.whl
           ${{ github.workspace }}/src/promptflow-tools/dist/*.whl
-  promptflow_tests:
+  promptflow_sdk_cli_tests:
     if: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'workflow_call' || github.event_name == 'pull_request' }}
     needs: build
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        testType: [sdk-cli]
-        pythonVersion: ['3.8']
+        pythonVersion: ['3.8', '3.9', '3.10']
     runs-on: ${{ matrix.os }}
     steps:
+    - name: set test mode
+      shell: pwsh
+      run: |
+        if ("${{ github.event_name }}" == "pull_request" -and "${{ matrix.os }}" != "windows-latest")) {
+          echo "PROMPT_FLOW_TEST_MODE=replay"  | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+        } else {
+          echo "PROMPT_FLOW_TEST_MODE=live"  | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+        }
     - name: checkout
       uses: actions/checkout@v3
     - name: Display and Set Environment Variables
@@ -91,11 +95,8 @@ jobs:
         gci ./promptflow-tools -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install $_.FullName}}
         pip freeze
     - name: Run SDK CLI Test
-      if : ${{ matrix.testType == 'sdk-cli' }}
       shell: pwsh
       working-directory: ${{ env.testWorkingDirectory }}
-      env:
-        PROMPT_FLOW_TEST_MODE: "replay"
       run: |
         python "../../scripts/building/run_coverage_tests.py" `
           -p promptflow `
@@ -109,14 +110,11 @@ jobs:
       working-directory: artifacts
       run: |
         Set-PSDebug -Trace 1
-        gci ./promptflow -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)[executable]" --force}}
+        gci ./promptflow -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)[executable]"}}
         pip freeze
     - name: Run SDK CLI Executable Test
-      if : ${{ matrix.testType == 'sdk-cli' }}
       shell: pwsh
       working-directory: ${{ env.testWorkingDirectory }}
-      env:
-        PROMPT_FLOW_TEST_MODE: "live"
       run: |
         python "../../scripts/building/run_coverage_tests.py" `
           -p promptflow `
@@ -124,35 +122,19 @@ jobs:
           -l eastus `
           -m "unittest or e2etest" `
           -o "${{ github.workspace }}/test-results-sdk-cli-executable.xml"
-    - name: Run Executor Test
-      if : ${{ matrix.testType == 'executor' }}
-      shell: pwsh
-      working-directory: ${{ github.workspace }}
-      run: |
-        gci env:* | sort-object name
-        az account show
-        pip install langchain
-        pip install numexpr
-        python scripts/building/run_coverage_tests.py `
-          -p ${{ github.workspace }}/src/promptflow/promptflow `
-          -t ${{ github.workspace }}/src/promptflow/tests/executor/e2etests ${{ github.workspace }}/src/promptflow/tests/executor/unittests `
-          -l eastus `
-          -m "all" `
-          -o "${{ github.workspace }}/test-results-executor.xml"
     - name: Upload pytest test results (Python ${{ matrix.pythonVersion }}) (OS ${{ matrix.os }})
       if: ${{ always() }}
       uses: actions/upload-artifact@v3
       with:
         name: Test Results (Python ${{ matrix.pythonVersion }}) (OS ${{ matrix.os }})
         path: ${{ github.workspace }}/*.xml
-  promptflow_tests_azure:
+  promptflow_sdk_cli_azure_tests:
     needs: build
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        testType: [sdk-cli, executor]
-        pythonVersion: ['3.8']
+        pythonVersion: ['3.8', '3.9', '3.10']
     runs-on: ${{ matrix.os }}
     steps:
     - name: checkout
@@ -183,11 +165,10 @@ jobs:
       working-directory: artifacts
       run: |
         pip install -r ${{ github.workspace }}/src/promptflow/dev_requirements.txt
-        gci ./promptflow -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)"}}
-        gci ./promptflow -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)[azure]" --force}}
+        gci ./promptflow-tools -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)"}}
+        gci ./promptflow -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)[azure]"}}
         pip freeze
     - name: Run SDK CLI Azure Test
-      if : ${{ matrix.testType == 'sdk-cli' }}
       shell: pwsh
       working-directory: ${{ env.testWorkingDirectory }}
       env:
@@ -205,9 +186,70 @@ jobs:
       with:
         name: Test Results (Python ${{ matrix.pythonVersion }}) (OS ${{ matrix.os }})
         path: ${{ github.workspace }}/*.xml
+  promptflow_executor_tests:
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'workflow_call' || github.event_name == 'pull_request' }}
+    needs: build
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest]
+        pythonVersion: ['3.8', '3.9', '3.10']
+    runs-on: ${{ matrix.os }}
+    steps:
+    - name: checkout
+      uses: actions/checkout@v3
+    - name: Display and Set Environment Variables
+      run:
+        env | sort >> $GITHUB_OUTPUT
+      shell: bash -el {0}
+    - name: Python Env Setup - ${{ matrix.os }} - Python Version ${{ matrix.pythonVersion }}
+      uses: "./.github/actions/step_create_python_environment"
+      with:
+        pythonVersion: ${{ matrix.pythonVersion }}
+    - name: Download Artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: wheel
+        path: artifacts
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Generate Configs
+      uses: "./.github/actions/step_generate_configs"
+      with:
+        targetFolder: ${{ env.testWorkingDirectory }}
+    - name: Install pf
+      shell: pwsh
+      working-directory: artifacts
+      run: |
+        pip install -r ${{ github.workspace }}/src/promptflow/dev_requirements.txt
+        gci ./promptflow -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install "$($_.FullName)[azure]"}}
+        gci ./promptflow-tools -Recurse | % {if ($_.Name.Contains('.whl')) {python -m pip install $_.FullName}}
+        pip freeze
+    - name: Run Executor Test
+      shell: pwsh
+      working-directory: ${{ github.workspace }}
+      run: |
+        gci env:* | sort-object name
+        az account show
+        pip install langchain
+        pip install numexpr
+        python scripts/building/run_coverage_tests.py `
+          -p ${{ github.workspace }}/src/promptflow/promptflow `
+          -t ${{ github.workspace }}/src/promptflow/tests/executor/e2etests ${{ github.workspace }}/src/promptflow/tests/executor/unittests `
+          -l eastus `
+          -m "all" `
+          -o "${{ github.workspace }}/test-results-executor.xml"
+    - name: Upload pytest test results (Python ${{ matrix.pythonVersion }}) (OS ${{ matrix.os }})
+      if: ${{ always() }}
+      uses: actions/upload-artifact@v3
+      with:
+        name: Test Results (Python ${{ matrix.pythonVersion }}) (OS ${{ matrix.os }})
+        path: ${{ github.workspace }}/*.xml
   publish-test-results:
     name: "Publish Tests Results"
-    needs: [ promptflow_tests, promptflow_tests_azure ]
+    needs: [ promptflow_sdk_cli_tests, promptflow_sdk_cli_azure_tests, promptflow_executor_tests ]
     runs-on: ubuntu-latest
     permissions:
       checks: write
@@ -221,8 +263,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           path: artifacts
-
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
-          files: "artifacts/**/*.xml"
+          files: "artifacts/**/test-*.xml"
