--- a/.github/workflows/tools_tests.yml
+++ b/.github/workflows/tools_tests.yml
@@ -23,10 +23,10 @@ jobs:
       - name: Setup
         run: |
           python -m pip install --upgrade pip
+          python ./scripts/building/dev_setup.py --promptflow-extra-deps azure
           pip install pytest pytest_mock
           pip install azure-identity azure-keyvault-secrets
           pip install google-search-results==2.4.1
-          pip install -r ./src/promptflow/dev_requirements.txt
           pip install openai>=1.0.0
       - name: Generate configs
         run: |
