--- a/.github/workflows/promptflow-release-testing-matrix-alter.yml
+++ b/.github/workflows/promptflow-release-testing-matrix-alter.yml
@@ -57,6 +57,7 @@ jobs:
     - name: set test mode
       shell: pwsh
       run: |
+        # Windows support of multiprocessing is different from other platforms, mock injections is not working properly in replay mode.
         if ("${{ github.event_name }}" == "pull_request" -and "${{ matrix.os }}" != "windows-latest") {
           echo "PROMPT_FLOW_TEST_MODE=replay"  | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
         } else {
