Update pf version to test

--- a/examples/requirements.txt
+++ b/examples/requirements.txt
@@ -1,4 +1,5 @@
-promptflow[azure]
+promptflow[azure]==0.0.112101725
+--extra-index-url https://azuremlsdktestpypi.azureedge.net/test-promptflow/
 promptflow-tools==0.1.0.b5
 python-dotenv
 bs4
