--- a/examples/requirements.txt
+++ b/examples/requirements.txt
@@ -1,6 +1,4 @@
-promptflow[azure]==0.0.112101725
---extra-index-url https://azuremlsdktestpypi.azureedge.net/test-promptflow/
-promptflow-tools==0.0.211
---extra-index-url https://azuremlsdktestpypi.azureedge.net/test-promptflow/
+promptflow[azure]
+promptflow-tools==0.1.0.b5
 python-dotenv
 bs4
