--- a/examples/tools/use-cases/custom-strong-type-connection-package-tool-showcase/requirements.txt
+++ b/examples/tools/use-cases/custom-strong-type-connection-package-tool-showcase/requirements.txt
@@ -1,2 +1,3 @@
-promptflow==0.1.0b8
+--extra-index-url https://azuremlsdktestpypi.azureedge.net/promptflow/
+promptflow[azure]==1.1.0
 my-tools-package==0.0.5
